style/index.css
/* 
    COLOR PALETTE: Soft Lavender https://coolors.co/palette/eae8ff-d8d5db-adacb5-2d3142-b0d7ff
    ##77bbff: blue
    #d8d5db: dark blue
    #adacb5: light gray
    #2d3142: dark gray
    #eae8ff: lavender
*/

* {
    margin: 0;
    padding: 0;
    border: 0;
    font-family: "Red Hat Display", sans-serif;
    font-style: normal;
}

body {
    background-color: #eae8ff;
    background-image: url("../img/bg.jpg");
    background-size: 100% auto;
}

#top-main {
    background-color: #2d3142;
    display: flex;
    justify-content: space-between;
    align-items: center;
}



#top-radius {
    background-color: #2d3142;
    border-bottom-right-radius: 100%;
    height: 200px;
}

#top-main-text {
    width: 60%;
}

#logo {
    right: 0;
}

h1 {
    color: #eae8ff;
    font-size: 100px;
}

h3 {
    color: #adacb5;
    font-size: 35px;
}

h2 {
    color: #adacb5;
    font-size: 60px;
}

#top-main-text {
    padding-top: 20%;
    padding-bottom: 5%;
    padding-left: 5%;
}

#name {
    
    color: #eae8ff;
    font-size: 100px;
    margin-top: -20px;
}

.section {
    padding: 15px;
}

.section-braile {
    color: #eae8ff;
    opacity: 70%;
}

.section-title {
    color: #eae8ff;
}

#aboutme {
    background-color: #77bbff;
    margin: 40px;
    margin-left: 10%;
    margin-right: 10%;
    border-radius: 20px;
    text-align: center;
    padding: 50px;
}

#aboutme-title {
    text-align: center;
    margin-top: -30px;
    
}

#aboutme-braile {
    text-align: center;
    margin-left: 200px; 
}

p {
    margin: 10px;
    font-size: 20px;
}

#skills {
    background-color: #2d3142;
    color: white;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    margin-right: 20%;
    padding: 50px;
}

.skill-title {
    color: #eae8ff;
}

#skills-title {
    text-align: end;
    margin-top: -20px;
    margin-right: 5px;
}

#skills-braile {
    text-align: end;
    margin-right: 40px;
}

.skills-section {
    display: flex;
    align-items: center;
}

#golang-logo {
    width: 270px;
    margin-right: 40px    
}

#golang-info {
    margin-right: 10%;
}

#java-info {
    text-align: end;
    margin-left: 10%;
}

#java-logo {
    width: 200px;
    margin-right: 5%;
}

#db-logo {
    width: 150px;
    margin-right: 65px;
    margin-left: 80px;
}

#db-info {
    margin-right: 10%;
}

#python-info {
    text-align: end;
    margin-left: 10%;
}

#python-logo {
    width: 175px;
    margin: 20px;
    margin-right: 5%;
}

#ccpp-logos {
    display: flex;
    align-items: center;
}

#c-logo {
    width: 120px;
    margin-left: 35px;
    margin-right: 10px;
    margin-bottom: 50px;
    margin-top: 30px;
}

#cpp-logo {
    width: 120px;
    margin-top: 100px;
    margin-right: 40px;
}

#ccpp-info {
    margin-right: 10%;
}

#participation {
    background-color: #2d3142;
    color: white;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    margin-left: 20%;
    margin-top: 40px;
    padding: 50px;
}

#participation-braile {
    margin-left: 55px;
}

#participation-title {
    margin-top: -20px;
    margin-bottom: 40px;
}

.participation-section {
    margin: 40px;
    display: flex;
    align-items: center;
    text-align: end;
}

#decode-logo {
    width: 175px;
    margin-left: 30px;
    margin-right: 50px;
}

#ctf-info {
    text-align: start;
}

#ctf-logo {
    margin-right: 30px;
    width: 170px;
    height: 170px;
}

#hackathon-logo {
    width: 170px;
    height: 170px;
    margin-right: 50px;
    margin-left: 30px;
}

#hackathon-section {
    margin-bottom: 0;
}

#contact {
    background-color: #77bbff;
    margin: 40px;
    margin-left: 25%;
    margin-right: 25%;
    border-radius: 20px;
    text-align: center;
    padding: 50px;
}

#contact-title {
    text-align: center;
    margin-top: -30px;
}

#contact-braile {
    text-align: center;
    margin-left: 200px; 
}

#contact-text {
    font-size: 20px;
}

#contact-button {
    margin-top: 10px;
    font-size: 25px;
    color: white;
    background-color: #2d3142;
    display: inline-block;
    padding: 15px;
    width: 120px;
    box-shadow: 10px 10px 0px 0px #eae8ff;    
}

#contact-button:hover {
    background-color: white;
    color: #2d3142;
    box-shadow: 10px 10px 0px 0px #2d3142; /* TODO: fade in effect*/  
    cursor: pointer;     
}


@media only screen and (max-width: 1126px) {

    /* TOP */
    #name {
        font-size: 60px;
        margin-top: -5px;
    }

    #degree {
        font-size: 30px;
    }

    #top-main {
        flex-direction: column-reverse; /* AGI */
        text-align: center;
        align-items: center;
        width: 100%;
    }

    #logo {
        width: 400px;
        height: 400px;
    }

    #top-main-text {
        width: 100%;
        padding-top: 0;
        padding-left: 0;
    }

    #top-radius {
        height: 100px;
    }

    /* ABOUT ME */
    #aboutme-braile, #contact-braile {
        font-size: 27px;
        margin-left: 0;
    }

    #aboutme-title, #contact-title {
        font-size: 45px;
        margin-top: -20px;
    }

    /* SKILLS */
    #skills {
        margin-right: 10%;
    }

    .skill-title {
        font-size: 40px
    }

    #golang-logo {
        width: 200px;
    }

    #skills-java {
        flex-direction: row-reverse;
    }

    #java-info {
        text-align: start;
        margin-left: 0;
    }

    #java-logo {
        margin-left: 40px;
        margin-right: 45px;
        width: 150px;
    }

    #db-logo {
        margin-left: 60px;
        width: 110px;
    }

    #python-info {
        text-align: start;
        margin-left: 0;
    }

    #python-logo {
        margin-left: 55px;
        margin-right: 70px;
        width: 120px;
    }

    #c-logo {
        margin-left: 15px;
        width: 100px;
    }

    #skills-python {
        flex-direction: row-reverse;
    }

    #cpp-logo {
        margin-right: 20px;
        width: 100px;
    }

    .skill-text {
        font-size: 15px;
    }

    /* PARTICIPATION */
    #participation {
        margin-left: 10%;
    }

    .participation-section {
        justify-content: space-between;
    }

    .skill-title {
        font-size: 40px
    }

    #participation-ctf {
        flex-direction: row-reverse;
    }

    #ctf-info {
        text-align: end;
    }

    #decode-logo {
        width: 120px;
    }

    #hackathon-logo {
        width: 120px;
    }

    #ctf-logo {
        margin-right: 50px;
        margin-left: 30px;
        width: 120px;
    }

    .participation-text {
        font-size: 15px;
    }

}

@media only screen and (max-width: 675px) {

    /* TOP */
    #name {
        font-size: 45px;
        margin-top: -5px;
    }

    #degree {
        font-size: 15px;
    }

    #name-braile {
        font-size: 15px;
    }

    #logo {
        width: 150px;
        height: 150px;
        margin-top: 30px;
    }

    #top-radius {
        height: 50px;
    }

    /* ABOUT ME */
    #aboutme, #contact {
        padding: 30px;
    }

    #aboutme-braile, #contact-braile {
        font-size: 15px;
    }

    #aboutme-title, #contact-title {
        font-size: 35px;
        margin-top: 0;
    }

    #aboutme-text, #contact-text {
        font-size: 15px;
    }

    /* SKILLS */
    #skills-braile {
        font-size: 15px;
        margin-right: 0;
    }

    #skills-title {
        margin-top: -5px;
        font-size: 40px;
        margin-bottom: 10px;
    }

    .skills-section {
        flex-direction: column;
        text-align: center;
    }

    #golang-info {
        margin: 0;
    }

    #skills-java {
        flex-direction: column-reverse;
    }

    #java-info {
        text-align: center;
    }

    #skills-python {
        flex-direction: column-reverse;
    }
    
    #python-info {
        text-align: center;
    }

    #golang-logo, #java-logo, #db-logo, #python-logo, #c-logo, #cpp-logo {
        margin: 0;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    #c-logo {
        margin-right: 20px;
    }

    #ccpp-info {
        margin-right: 0;
    }

    #db-info {
        margin-right: 0;
    }

    /* PARTICIPATION */
    #participation-braile {
        font-size: 15px;
        margin-left: 0;
    }

    #participation-title {
        margin-top: -5px;
        font-size: 40px;
        margin-bottom: 10px;
    }

    .participation-section {
        flex-direction: column-reverse;
        text-align: center;
    }

    #participation-ctf {
        flex-direction: column;
    }

    #ctf-info {
        text-align: center;
    }

    #decode-logo, #ctf-logo, #hackathon-logo {
        margin: 0;
    }

    #contact-button {
        width: 70px;
        font-size: 15px;
    }
}

